Bug 79828 - Weston segfault on fullscreening when keybinding is used
Summary: Weston segfault on fullscreening when keybinding is used
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-06-09 09:30 UTC by Boyan Ding
Modified: 2014-06-26 09:46 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Boyan Ding 2014-06-09 09:30:27 UTC
Current git version of weston will segfault when using mod + shift + f binding.

Proposed fix at http://lists.freedesktop.org/archives/wayland-devel/2014-June/015358.html
Comment 1 Pekka Paalanen 2014-06-26 09:46:37 UTC
v2 of the patch is merged in Weston master:

commit 32abdbbad97e99cc76409ecfa4b446db63907cc3
Author: Boyan Ding <stu_dby@126.com>
Date:   Thu Jun 26 10:19:32 2014 +0800

    shell: fix segfault in fullscreen binding
    
    Commit 9aa8ce69 forgot to set shsurf->fullscreen_output in
    fullscreen_binding(), causing segfault when fullscreening using key
    bindings. This patch fixes that.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=79828
    Signed-off-by: Boyan Ding <stu_dby@126.com>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.